-
Bug
-
Resolution: Fixed
-
Blocker
-
None
-
None
-
3
-
13410
2014-03-19 10:37:26 LustreError: 66532:0:(osc_io.c:832:osc_req_attr_set()) page@ffff8807cf0f4000[3 ffff8806bf78b0f8 3 0 1 (null) ffff8806a90e5880 0x0]
2014-03-19 10:37:26 LustreError: 66533:0:(osc_io.c:832:osc_req_attr_set()) page@ffff8806f3447000[3 ffff880823359d38 3 0 1 (null) ffff8806af724bc0 0x0]
2014-03-19 10:37:26 LustreError: 66533:0:(osc_io.c:832:osc_req_attr_set()) vvp-page@ffff8806f34470a0(1:0:0) vm@ffffea001d593ab8 40000000000821 2:0 ffff8806f3447000 2560 lru
2014-03-19 10:37:26 LustreError: 66533:0:(osc_io.c:832:osc_req_attr_set()) lov-page@ffff8806f34470f8, raid0
2014-03-19 10:37:26 LustreError: 66533:0:(osc_io.c:832:osc_req_attr_set()) osc-page@ffff8806f3447160 0: 1< 0x845fed 1 0 + + > 2< 0 0 4096 0x7 0x8 | (null) ffff881072b105e0 ffff88072657f068 > 3< + ffff88085b2d7500 1 0 0 > 4< 0 0 8 38383616 - | - - - + > 5< - - - + | 0 - | 0 - ->
2014-03-19 10:37:26 LustreError: 66533:0:(osc_io.c:832:osc_req_attr_set()) end page@ffff8806f3447000
2014-03-19 10:37:26 LustreError: 66533:0:(osc_io.c:832:osc_req_attr_set()) dump uncover page!
2014-03-19 10:37:26 Pid: 66533, comm: miranda_io
2014-03-19 10:37:26
2014-03-19 10:37:26 Call Trace:
2014-03-19 10:37:26 [<ffffffffa052d895>] libcfs_debug_dumpstack+0x55/0x80 [libcfs]
2014-03-19 10:37:26 [<ffffffffa0da41a6>] osc_req_attr_set+0x566/0x5b0 [osc]
2014-03-19 10:37:26 [<ffffffffa0538328>] ? libcfs_log_return+0x28/0x40 [libcfs]
2014-03-19 10:37:26 [<ffffffffa0675e71>] cl_req_attr_set+0xd1/0x230 [obdclass]
2014-03-19 10:37:26 [<ffffffffa0d94ec7>] osc_build_rpc+0x487/0x1850 [osc]
2014-03-19 10:37:26 [<ffffffffa053d911>] ? libcfs_debug_msg+0x41/0x50 [libcfs]
2014-03-19 10:37:26 [<ffffffffa0db04c7>] osc_io_unplug0+0x1257/0x1f00 [osc]
2014-03-19 10:37:26 [<ffffffffa0db2ef1>] osc_io_unplug+0x11/0x20 [osc]
2014-03-19 10:37:26 [<ffffffffa0db30cd>] osc_queue_sync_pages+0x1cd/0x350 [osc]
2014-03-19 10:37:26 [<ffffffffa0da4607>] osc_io_submit+0x1c7/0x4b0 [osc]
2014-03-19 10:37:26 [<ffffffffa06756ae>] cl_io_submit_rw+0x6e/0x160 [obdclass]
2014-03-19 10:37:26 [<ffffffffa0e38389>] lov_io_submit+0x189/0x4b0 [lov]
2014-03-19 10:37:26 [<ffffffffa06756ae>] cl_io_submit_rw+0x6e/0x160 [obdclass]
2014-03-19 10:37:26 [<ffffffffa0677d40>] cl_io_read_page+0x180/0x190 [obdclass]
2014-03-19 10:37:26 [<ffffffffa0edd0a1>] ll_readpage+0x91/0x1a0 [lustre]
2014-03-19 10:37:26 [<ffffffff811212fc>] generic_file_aio_read+0x1fc/0x700
2014-03-19 10:37:26 [<ffffffffa0f0e199>] vvp_io_read_start+0x259/0x470 [lustre]
2014-03-19 10:37:26 [<ffffffffa067593a>] cl_io_start+0x6a/0x140 [obdclass]
2014-03-19 10:37:26 [<ffffffffa0679ac4>] cl_io_loop+0xb4/0x1b0 [obdclass]
2014-03-19 10:37:26 [<ffffffffa0eaff06>] ll_file_io_generic+0x2b6/0x710 [lustre]
2014-03-19 10:37:26 [<ffffffffa06698a9>] ? cl_env_get+0x29/0x350 [obdclass]
2014-03-19 10:37:26 [<ffffffffa0eb0faf>] ll_file_aio_read+0x13f/0x2c0 [lustre]
2014-03-19 10:37:26 [<ffffffffa0eb129c>] ll_file_read+0x16c/0x2a0 [lustre]
2014-03-19 10:37:26 [<ffffffff81189695>] vfs_read+0xb5/0x1a0
2014-03-19 10:37:26 [<ffffffff811897d1>] sys_read+0x51/0x90
2014-03-19 10:37:26 [<ffffffff810e1e4e>] ? __audit_syscall_exit+0x25e/0x290
2014-03-19 10:37:27 [<ffffffff8100b072>] system_call_fastpath+0x16/0x1b
The root cause of this problem is a defect in lov_raid0_page_is_under_lock() where it assumed the stripe size is a power of 2.