LU-4860 lov: Handle the case of stripe size is not power 2

Calculate the end of current stripe correctly when the stripe size
is not power 2.

Signed-off-by: Jinshan Xiong <jinshan.xiong@intel.com>
Change-Id: Ic250298b668d3bc32ed14d8390b897578a9c89a2
Reviewed-on: http://review.whamcloud.com/9882
Tested-by: Jenkins
Reviewed-by: Bobi Jam <bobijam@gmail.com>
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>